--- a/src/style/FirstSection.css
+++ b/src/style/FirstSection.css
@@ -29,7 +29,7 @@
     margin-top: 5px;
 }
 
-.OneSection {
+.SectionOne {
     display: flex;
     align-items: center;
     justify-content: center;
