--- a/src/style/FirstSection.css
+++ b/src/style/FirstSection.css
@@ -37,11 +37,9 @@
     background-color: black;
 }
 
-.Background {
-    background: url('../img/background1.jpg') center/cover no-repeat; 
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 20px 20px;
-    backdrop-filter: blur( 3px );
-    -webkit-backdrop-filter: blur( 3px );
-}
+.CircleGroup {
+    will-change: transform;
+  }
+  
+
 
